--- a/css/style.css
+++ b/css/style.css
@@ -17,33 +17,39 @@ img {
 .container {
   margin: 20px auto;
   width: 100%;
+  max-width: 1400px;
   min-width: 950px;
-  background: linear-gradient(0deg, rgba(227,8,19,1) 30%, rgba(0,0,0,1) 50%);
-  box-shadow: 2px 9px 26px 7px rgba(227,8,19,0.85);
+  background: linear-gradient(0deg, #e30813 0%, #000 40%);
+  box-shadow: 2px 9px 26px 7px #e30813;
 }
 
 header {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 100%;
-  height: 150px;
-  flex-wrap: wrap;
   position: fixed;
   top: 0;
   z-index: 2;
+  width: 100%;
+  max-width: 1400px;
+}
+
+header .inner-header {
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
+  align-items: center;
+  height: 150px;
+  flex-wrap: wrap;
   background: #000;
 }
 
 header .logo-bool {
-  width: 300px;
+  width: 200px;
 }
 
 header .menu-scelta {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
-  width: 10%;
+  width: 20%;
   font-size: 25px;
   cursor: pointer;
 }
@@ -61,7 +67,7 @@ header .search {
 
 header input {
   height: 50px;
-  width: 400px;
+  width: 300px;
   font-size: 30px;
   padding: 10px;
   outline: none;
@@ -76,9 +82,9 @@ header .btn-search {
   height: 55px;
   line-height: 60px;
   text-align: center;
-  width: 150px;
+  width: 100px;
   background: #e30813;
-  font-size: 30px;
+  font-size: 20px;
   border: solid #f000 1px;
   cursor: pointer;
 }
@@ -112,7 +118,7 @@ main h2 {
 main .card-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: flex-start;
   padding: 10px;
 }
@@ -121,6 +127,7 @@ main .card {
   position: relative;
   padding: 5px;
   border: solid 2px #fff;
+  margin-top: 20px;
 }
 
 .title, .original-title,  .language, .vote, .overview {
@@ -128,8 +135,8 @@ main .card {
 }
 
 main .copertina {
-  width: 342px;
-  height: 550px;
+  width: 185px;
+  height: 300px;
   display: flex;
 }
 
@@ -140,8 +147,8 @@ main .info {
   transform: translate(-50% , -50%);
   top: 50%;
   left: 50%;
-  width: 342px;
-  height: 550px;
+  width: 185px;
+  height: 300px;
   overflow-y: auto;
   display: none;
 }
