--- a/css/style.css
+++ b/css/style.css
@@ -102,34 +102,25 @@ header .alert-risultati {;
 
 main {
   height: calc(100% - 200px);
-  margin: 180px auto 0 auto;
+  margin: 0 auto;
+  margin-top: 180px;
   width: 80%;
-}
-
-main h2 {
-  width: 100%;
-  height: 100px;
-  line-height: 100px;
-  text-align: center;
-  margin-top: 30px;
-  border-top: solid #000 3px;
 }
 
 main .card-container {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: flex-start;
   padding: 10px;
 }
 
 main .card {
   position: relative;
-  padding: 5px;
   border: solid 2px #fff;
 }
 
-.title, .original-title,  .language, .vote, .overview {
+main .title, .original-title,  .language, .vote, .overview {
   margin-top: 10px;
 }
 
