--- a/css/style.css
+++ b/css/style.css
@@ -20,21 +20,18 @@ img {
 /* /utility class */
 
 .container {
-  margin: 20px auto;
-  width: 100%;
-  max-width: 1400px;
+  width: 100vw;
+  max-width: 100%;
   min-width: 950px;
   height: calc(100% - 40px);
-  background: linear-gradient(0deg,  #000 30%, #e30813 70%);
+  background: #000;
 }
 
 header {
   position: fixed;
   top: 0;
   z-index: 2;
-  width: 100%;
-  max-width: 1400px;
-  box-shadow: 2px 9px 26px 7px #e30813;
+  width: 100vw;
 }
 
 header .inner-header {
@@ -42,7 +39,7 @@ header .inner-header {
   width: 100%;
   justify-content: space-around;
   align-items: center;
-  height: 150px;
+  height: 120px;
   flex-wrap: wrap;
   background: #000;
 }
@@ -105,16 +102,18 @@ header .box-query-empty {
   text-align: center;
 }
 
-header .alert-risultati {;
+header .alert-risultati {
   width: 100%;
   font-size: 30px;
   text-align: center;
 }
 
 main {
-  width: 80%;
+  width: 100vw;
+  max-width: 100%;
   margin: 0 auto;
-  margin-top: 180px;
+  margin-top: 130px;
+  position: relative;
 }
 
 main .pagina-errore {
@@ -123,27 +122,32 @@ main .pagina-errore {
 }
 
 main .home-page {
-  width: 100%;
-  position: relative;
   font-size: 30px;
 }
 
 main .home-page .immagine-suggerita {
-  width: 25vw;
+  width: 100%;
+  height: 800px;
+  overflow: hidden;
+}
+
+main .home-page .immagine-suggerita img {
+  width: 100%;
+  filter:brightness(50%);
 }
 
 main .home-page .info-homepage, .consiglio {
   position: absolute;
   transform: translate(-50% , -50%);
-  top: 50%;
-  left: 70%;
-  width: 50%;
-  height: 70%;
+  top: 40%;
+  left: 25%;
+  width: 600px;
+  height: 50%;
 }
 
 main .home-page .consiglio {
-  top: 5%;
-  left: 95%;
+  top: 10%;
+  left: 80%;
   width: max-content;
   height: max-content;
   text-align: center;
