--- a/css/style.css
+++ b/css/style.css
@@ -127,20 +127,19 @@ main .home-page {
 
 main .home-page .immagine-suggerita {
   width: 100%;
-  height: 800px;
-  overflow: hidden;
+  height: 80vh;
 }
 
 main .home-page .immagine-suggerita img {
-  width: 100%;
+  height: 100%;
   filter:brightness(50%);
 }
 
 main .home-page .info-homepage, .consiglio {
   position: absolute;
   transform: translate(-50% , -50%);
-  top: 40%;
-  left: 25%;
+  top: 30%;
+  left: 30%;
   width: 600px;
   height: 50%;
 }
@@ -168,6 +167,19 @@ main .info-homepage .overview-home  div {
   font-size: 20px;
 }
 
+main .home-page .slider-container {
+  width: 100vw;
+  max-width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+main .home-page .poster-slider {
+  width: 342px;
+  /* height: 550px; */
+}
+
 main .card-container {
   width: 100%;
   display: flex;
@@ -189,17 +201,26 @@ main .copertina {
   display: flex;
 }
 
-main .info {
+main .info-slider, .info {
   padding: 10px;
   background: #000;
   position: absolute;
   transform: translate(-50% , -50%);
   top: 50%;
   left: 50%;
-  width: 185px;
-  height: 300px;
+  width: 342px;
+  height: 510px;
   overflow-y: auto;
   display: none;
+}
+
+main .info {
+  width: 185px;
+  height: 300px;
+}
+
+main .slider-container .card:hover .info-slider {
+  display: block;
 }
 
 main .card:hover .info {
@@ -218,4 +239,19 @@ main .info .box-image {
 
 .yellow-star {
   color: #ffff00;
+}
+
+.prev, .next {
+  position: absolute;
+  color: #565a5c;
+  top: 80%;
+  left: 0;
+  /* transform: translateY(-50%); */
+  font-size: 40px;
+  cursor: pointer;
+}
+
+.next {
+  left: auto;
+  right: 0;
 }
