--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,15 @@ img {
 .mrg-top {
   margin-top: 10px;
 }
+
+.flex {
+  display: flex;
+  align-items: center;
+}
+
+.justify-left {
+  justify-content: left;
+}
 /* /utility class */
 
 .container {
@@ -127,7 +136,7 @@ main .home-page {
 
 main .home-page .immagine-suggerita {
   width: 100%;
-  height: 80vh;
+  height: 90vh;
 }
 
 main .home-page .immagine-suggerita img {
@@ -168,31 +177,30 @@ main .info-homepage .overview-home  div {
 }
 
 main .home-page .slider-container {
+  padding: 30px 10px;
   width: 100vw;
   max-width: 100%;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
 }
 
 main .home-page .poster-slider {
   width: 342px;
-  /* height: 550px; */
+  overflow: hidden;
 }
 
 main .card-container {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 10px;
 }
 
 main .card {
   position: relative;
-  border: solid 2px #fff;
-  margin-top: 40px;
 }
 
 main .copertina {
@@ -203,7 +211,9 @@ main .copertina {
 
 main .info-slider, .info {
   padding: 10px;
+  font-size: 15px;
   background: #000;
+  opacity: 0.7;
   position: absolute;
   transform: translate(-50% , -50%);
   top: 50%;
@@ -227,7 +237,7 @@ main .card:hover .info {
   display: block;
 }
 
-main .info .box-image {
+main .box-image {
   width: 40px;
   margin-top: 5px;
 }
@@ -238,20 +248,13 @@ main .info .box-image {
 }
 
 .yellow-star {
-  color: #ffff00;
+  color: #ff0000;
 }
 
 .prev, .next {
-  position: absolute;
   color: #565a5c;
-  top: 80%;
-  left: 0;
-  /* transform: translateY(-50%); */
+  height: 100%;
+  margin: 0 20px 0 20px;
   font-size: 40px;
   cursor: pointer;
-}
-
-.next {
-  left: auto;
-  right: 0;
 }
