--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,11 @@ img {
 
 .flex {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
 }
 
-.justify-left {
-  justify-content: left;
+.justify-center {
+  justify-content: center;
 }
 /* /utility class */
 
@@ -92,8 +92,9 @@ header input {
 
 header .btn-search {
   height: 55px;
-  line-height: 60px;
-  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
   width: 100px;
   background: #e30813;
   font-size: 20px;
@@ -102,8 +103,7 @@ header .btn-search {
 }
 
 .btn-search i {
-  font-size: 30px;
-  vertical-align: middle;
+  font-size: 40px;
 }
 
 header .box-query-empty {
@@ -135,12 +135,12 @@ main .home-page {
 }
 
 main .home-page .immagine-suggerita {
-  width: 100%;
-  height: 90vh;
+  height: 70vh;
+  overflow: hidden;
 }
 
 main .home-page .immagine-suggerita img {
-  height: 100%;
+  height: 70vh;
   filter:brightness(50%);
 }
 
@@ -176,6 +176,10 @@ main .info-homepage .overview-home  div {
   font-size: 20px;
 }
 
+main .home-page .title-section {
+  margin-top: 30px;
+}
+
 main .home-page .slider-container {
   padding: 30px 10px;
   width: 100vw;
@@ -194,7 +198,7 @@ main .card-container {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
   padding: 10px;
 }
